Avoided white space collapsing

--- a/research/regExpHighlighter.css
+++ b/research/regExpHighlighter.css
@@ -15,6 +15,7 @@ body {
   font-family: monospace;
   overflow-y: auto;
   word-wrap: break-word;
+  white-space: pre-wrap;
 }
 
 .bracket {
